testsuite/poke.pkl/bconc-lvalue-diag-1.pk
/* { dg-do compile } */

var a = 1;
var b = 2;
var c = 3;

a:::(b:::c) = 10; /* { dg-error "width" } */
